--- a/.templates/sidebar_otherserver.en.html
+++ b/.templates/sidebar_otherserver.en.html
@@ -18,19 +18,19 @@
  <script type="text/javascript">
   switch(window.location.host) {
     case 'jarvis.crans.org':
-        document.write("<br/>On <span style=\"text-decoration:underline\"><a href=\"http://besson.qc.to/{{ pagename|e }}{{ file_suffix|e }}\">besson.qc.to</a></span>\n");
-        document.write("<br/>On <span style=\"text-decoration:underline\"><a href=\"http://lbesson.qc.to/{{ pagename|e }}{{ file_suffix|e }}\">lbesson.qc.to</a></span>\n");
+        document.write("</br>On <span style=\"text-decoration:underline\"><a href=\"http://besson.qc.to/{{ pagename|e }}{{ file_suffix|e }}\">besson.qc.to</a></span>\n");
+        document.write("</br>On <span style=\"text-decoration:underline\"><a href=\"http://lbesson.qc.to/{{ pagename|e }}{{ file_suffix|e }}\">lbesson.qc.to</a></span>\n");
         break;
     case 'perso.crans.org':
-        document.write("<br/>On <span style=\"text-decoration:underline\"><a href=\"http://jarvis.crans.org/{{ pagename|e }}{{ file_suffix|e }}\">jarvis.crans.org</a></span>\n");
-        document.write("<br/>On <span style=\"text-decoration:underline\"><a href=\"http://lbesson.qc.to/{{ pagename|e }}{{ file_suffix|e }}\">lbesson.qc.to</a></span>\n");
+        document.write("</br>On <span style=\"text-decoration:underline\"><a href=\"http://jarvis.crans.org/{{ pagename|e }}{{ file_suffix|e }}\">jarvis.crans.org</a></span>\n");
+        document.write("</br>On <span style=\"text-decoration:underline\"><a href=\"http://lbesson.qc.to/{{ pagename|e }}{{ file_suffix|e }}\">lbesson.qc.to</a></span>\n");
         break;
     case 'www.dptinfo.ens-cachan.fr':
-        document.write("<br/>On <span style=\"text-decoration:underline\"><a href=\"http://besson.qc.to/{{ pagename|e }}{{ file_suffix|e }}\">besson.qc.to</a></span>\n");
-        document.write("<br/>On <span style=\"text-decoration:underline\"><a href=\"http://jarvis.crans.org/{{ pagename|e }}{{ file_suffix|e }}\">jarvis.crans.org</a></span>\n");
+        document.write("</br>On <span style=\"text-decoration:underline\"><a href=\"http://besson.qc.to/{{ pagename|e }}{{ file_suffix|e }}\">besson.qc.to</a></span>\n");
+        document.write("</br>On <span style=\"text-decoration:underline\"><a href=\"http://jarvis.crans.org/{{ pagename|e }}{{ file_suffix|e }}\">jarvis.crans.org</a></span>\n");
         break;
     default:
-        document.write("<br/>Error, this page is hosted on an unknown location...");
+        document.write("</br>Error, this page is hosted on an unknown location...");
         break;
   }
  </script>
