--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -281,11 +281,11 @@ $(document).ready(function() {
   preventDefault: true,
  });
 });
-/* TimeAgo jQuery plugin */
+/* TimeAgo jQuery plugin. Pas utilisé vraiment encore. */
  jQuery(document).ready(function() {
    jQuery("abbr.timeago").timeago();
  });
-/* Waypoints jQuery plugin */
+/* Waypoints jQuery plugin. Marche pas bien encore pour la sidebar. */
  $(document).ready(function() {
   $('.related').waypoint('sticky', {
     offset: 0 // Apply "stuck" when element 0px from top
@@ -337,7 +337,7 @@ $(document).ready(function() {
 +" Ce site est maintenu par Lilian Besson © 2013.")
             },{
   'type':'keydown',
-  'propagate':false,
+  'propagate':true,
   'disable_in_input':true,
   'target':document
             });
@@ -345,7 +345,7 @@ $(document).ready(function() {
   location.href="{{ prev.link|e }}";
             },{
   'type':'keydown',
-  'propagate':false,
+  'propagate':true,
   'disable_in_input':true,
   'target':document
             });    
@@ -353,7 +353,7 @@ $(document).ready(function() {
   location.href="{{ prev.link|e }}";
             },{
   'type':'keydown',
-  'propagate':false,
+  'propagate':true,
   'disable_in_input':true,
   'target':document
             });    {% endif %}
@@ -361,7 +361,7 @@ $(document).ready(function() {
   location.href="index.html";
             },{
   'type':'keydown',
-  'propagate':false,
+  'propagate':true,
   'disable_in_input':true,
   'target':document
             });    
@@ -369,7 +369,7 @@ $(document).ready(function() {
   location.href="{{ next.link|e }}";
             },{
   'type':'keydown',
-  'propagate':false,
+  'propagate':true,
   'disable_in_input':true,
   'target':document
             });
@@ -377,12 +377,25 @@ $(document).ready(function() {
   location.href="{{ next.link|e }}";
             },{
   'type':'keydown',
-  'propagate':false,
+  'propagate':true,
   'disable_in_input':true,
   'target':document
             });{% endif %}
-</script>
- <script type="text/javascript">
+ {% if last_updated %}shortcut.add("u",function() { //%d %b %Y
+  var last_updated_value = {{ last_updated }};
+  var day = last_updated_value.substring(0, 1);
+  var month = last_updated_value.substring(3, 6); // FIXME convert Sep -> 09, Oct -> 10 ect...
+  var year = last_updated_value.substring(8, 12);
+  window.alert("Cette page a été générée le " + last_updated_value + "\nSoit " +
+   jQuery.timeago( "22" + "-" + "09" + "-" + "2013" ) 
+   + "." );
+            },{
+  'type':'keydown',
+  'propagate':true,
+  'disable_in_input':true,
+  'target':document
+            });{% endif %}
+ // Restore the first title.
   $(document).ready(function() {
    window.parent.document.title=title_backup;
   });
@@ -391,7 +404,7 @@ $(document).ready(function() {
 <!-- The ribbon -->
 <div class="theribbon">
 <a class="forkit" data-text="On Facebook" data-text-detached="Friend me !" href="https://www.facebook.com/naereencorp.lbesson">
- <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/camo.github.com/e6bef7a091f5f3138b8cd40bc3e114258dd68ddf/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Friend me on Facebook">
+ <img style="position: absolute; top: 0; right: 0; border: 0;" src="{{ pathto('_images/.forkit_ribbon.png', true)|e }}" alt="Friend me on Facebook">
  </a>
 <script type="text/javascript" src="{{ pathto('_static/forkit.js', true)|e }}"></script>
 </div>
