Change doctype to HTML5 standard.

--- a/.templates/linkpdf.en.html
+++ b/.templates/linkpdf.en.html
@@ -9,6 +9,10 @@
 #}
 <h3>My résumé in PDF ?</h3>
 <ul class="this-page-menu">
-  <li><a style="text-decoration: underline" href="cv.pdf"
-         rel="nofollow">Consult my résumé cv.pdf</a> (in English).</li></br></br>
-</ul>
+ <li><a style="text-decoration: underline" href="cv.pdf" title="My PDF résumé!"
+         rel="nofollow">Consult my résumé cv.pdf</a> (in English).</li>
+ <li><a class="image-reference" href="index_en.html" title="Page in English" >
+  <img style="width:36px;height:23px;display:block;margin-left:auto;margin-right:auto"
+         src="{{ pathto('_images/.en.gif', true)|e }}" alt="Page in English" /></a>
+ </li>
+</ul></br>
