--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -8,10 +8,20 @@
     :license: GPLv3, see LICENSE for details.
 #}
 {% extends "!layout.html" %}
+{% block doctype %}<!DOCTYPE html>{% endblock %}
 {% block rootrellink %}
  <li><img src="{{ pathto('_static/.besson.png', true)|e }}" alt=""
   style="height:32px; width:32px; vertical-align: middle; margin-top: -1px" /></li>
  <li><a href="{{ pathto('index') }}">{{ shorttitle }}</a>{{ reldelim1 }}</li>
+{% endblock %}
+
+{% block relbar1 %}
+{{ super() }}
+{% endblock %}
+
+{# To remove the relbar in the bottom of HTML documents. #}
+{% block relbar2 %}
+{{ super() }}
 {% endblock %}
 
 {% block relbaritems %}
@@ -29,7 +39,6 @@
 {% endblock %}
 
 {% block extrahead %}
- <!-- Trying to change the title. Fail by now. -->
  <script type="text/javascript">
   var myip = "unknown"; // have to be initialized before calling l2.io/ip.js?var=myip
   var title_backup = window.document.title;
@@ -46,7 +55,7 @@
     <meta name="DC.Language" content="fr" />
     <meta name="DC.Creator" content="Lilian Besson" />
     <meta name="DC.Subject" content="Computer Science,Maths,OCaml,Python,Crans,ENS de Cachan,ENS Cachan,UCL,PPLV,GNU Nano,Ubuntu,gedit,GNUPlot,GraphViz,GPG,LaTeX,rST,Octave,PGP,Javascript,restructuredtext,pokemon,pokémon,sphinx,bash,cv,résumé,curriculum,GnuPG,Wolfram,Wolfram|Alpha,histoire,nanorc,public key,private key,rsa key,trademarks,transifex,translation,traduction,jota,jota+" />
-    <meta name="DC.Date" content="2013-24-13" />
+    <meta name="DC.Date" content="2013-25-13" />
   <!-- End of Dublin Core Metadata -->
   <!-- RSS workflow (from perso.crans.org/besson) -->
     <link rel="alternate" type="application/rss+xml" title="Suivre l'évolution de mon site"
