--- a/.templates/linkpdf.fr.html
+++ b/.templates/linkpdf.fr.html
@@ -7,12 +7,11 @@
     :copyright: Copyright 2013 Lilian Besson
     :license: GPLv3, see LICENSE for details.
 #}
+<a class="image-reference" href="index_fr.html" title="Page en Français" >
+	<img style="width:36px;height:23px;display:block;margin-left:auto;margin-right:auto"
+         src="{{ pathto('_images/.fr.gif', true)|e }}" alt="Page en Français" /></a></br>
 <h3>Mon CV en PDF ?</h3>
 <ul class="this-page-menu">
  <li><a style="text-decoration: underline" href="cv.pdf" title="Mon CV en PDF !"
          rel="nofollow">Voir mon CV en PDF</a> (en anglais).</li>
- <li><a class="image-reference" href="index_fr.html" title="Page en Français" >
-  <img style="width:36px;height:23px;display:block;margin-left:auto;margin-right:auto"
-         src="{{ pathto('_images/.fr.gif', true)|e }}" alt="Page en Français" /></a>
- </li>
 </ul></br>
