--- a/.templates/sidebar_gpg.en.html
+++ b/.templates/sidebar_gpg.en.html
@@ -10,20 +10,15 @@
 <div class="will-be-sticky">
 <h3>My public PGP key</h3>
 <ul class="this-page-menu">
- <li>
-   On the MIT server:
-  <a class="reference external image-reference"
-   href="http://pgp.mit.edu:11371/pks/lookup?op=get&search=0x01AACDB9C108F8A0">
+ <li>On the MIT server:
+  <a class="reference external image-reference" title="pgp.mit.edu:11371/pks" 
+   href="http://pgp.mit.edu:11371/pks/lookup?op=get&amp;search=0x01AACDB9C108F8A0">
    <img alt="C108F8A0" src="{{ pathto('_images/.gpgpublickey_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" />
-  </a>
- </li>
- </br>
- <li>
-  On this site:
-  <a class="reference external image-reference"
-   href="{{ pathto('Lilian_Besson.asc', true)|e }}" >
+  </a></li>
+</br>
+ <li>On this site:
+  <a class="reference external image-reference" title="key.asc" 
+     href="{{ pathto('Lilian_Besson.asc', true)|e }}" >
    <img alt="C108F8A0" src="{{ pathto('_images/.gpgmypublickey_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" />
-  </a>
- </li>
-</ul>
+  </a></li></ul>
 </div>
