--- a/.templates/sourcepdfcv.en.html
+++ b/.templates/sourcepdfcv.en.html
@@ -10,16 +10,16 @@
 {%- if show_source and has_source and sourcename %}
 <h3>Mon CV en Français ?</h3>
 <ul class="this-page-menu">
-  <li><a style="text-decoration: underline" href="cv.fr.html"
+  <li><a style="text-decoration: underline" href="cv.fr.html" title="French version"
          rel="nofollow">Lisez-le en français</a>, en HTML.</li>
-</ul><br/>
+</ul>
 <h3>My résumé in PDF</h3>
 <ul class="this-page-menu">
-  <li><a style="text-decoration: underline" href="cv.pdf"
+  <li><a style="text-decoration: underline" href="cv.pdf" title="PDF English version"
          rel="nofollow">Go to the PDF version</a>, compiled from LaTeX with pdflatex.</li></br></br>
-  <li><a style="text-decoration: underline" href="cv.fr.pdf"
+  <li><a style="text-decoration: underline" href="cv.fr.pdf" title="PDF French version, from rST"
          rel="nofollow">Go to the PDF version</a>, compiled from rST (with rst2latex and pdflatex), in French.</li></br>
-  <li><a style="text-decoration: underline" href="cv.en.pdf"
+  <li><a style="text-decoration: underline" href="cv.en.pdf" title="PDF English version, from rST"
          rel="nofollow">Go to the PDF version</a>, compiled from rST (with rst2latex and pdflatex), in English.</li></br>
 </ul>
 {%- endif %}
