--- a/.templates/sourcepdfcv.fr.html
+++ b/.templates/sourcepdfcv.fr.html
@@ -10,16 +10,16 @@
 {%- if show_source and has_source and sourcename %}
 <h3>My résumé in English ?</h3>
 <ul class="this-page-menu">
-  <li><a style="text-decoration: underline" href="cv.en.html"
+  <li><a style="text-decoration: underline" href="cv.en.html" title="Version anglaise"
          rel="nofollow">Consult it in English</a>, in HTML.</li></br>
-</ul><br/>
+</ul>
 <h3>Mon CV en PDF</h3>
 <ul class="this-page-menu">
-  <li><a style="text-decoration: underline" href="cv.pdf"
+  <li><a style="text-decoration: underline" href="cv.pdf" title="Version PDF"
          rel="nofollow">Voir la version PDF</a>, compilée depuis LaTeX par pdflatex.</li></br></br>
-  <li><a style="text-decoration: underline" href="cv.fr.pdf"
+  <li><a style="text-decoration: underline" href="cv.fr.pdf" title="Version PDF, depuis du rST"
          rel="nofollow">Voir la version PDF</a>, compilée depuis rST (avec rst2latex et pdflatex), en français.</li></br>
-  <li><a style="text-decoration: underline" href="cv.en.pdf"
+  <li><a style="text-decoration: underline" href="cv.en.pdf" title="Version PDF, depuis du rST"
          rel="nofollow">Voir la version PDF</a>, compilée depuis rST (avec rst2latex et pdflatex), en anglais.</li></br>
 </ul>
 {%- endif %}
