--- a/.templates/download.en.html
+++ b/.templates/download.en.html
@@ -23,7 +23,7 @@
 <h2>Download these pages in PDFF</h2>
  <p>These web pages are generated with <strong>Sphinx</strong>.
 And when I generate them, one of my script use rst2pdf to also produce a PDF version of each HTML pages.</p>
- <p>The folder <a href="{{ pathto('pdf/', true)|e }}">pdf/</a> is there to download
+ <p>The folder <a href="{{ pathto('pdf/', true)|e }}" title="pdf/ folder" >pdf/</a> is there to download
 some PDF files produced that way.</p>
  <p>This is already functionnal, but some pages are useless without JavaScript (not yet integrated in the PDF documents, but it might be possible).</p>
 <br/>
@@ -34,7 +34,7 @@ some PDF files produced that way.</p>
   <a href="mailto:naereen[@]crans[.]org?subject=[web-sphinx]">naereen[@]crans[.]org</a>.</p>
 <h2>Troubles</h2>
  <p>If you encounter any difficulty, or if you have a question,
-please use the page <a href="https://bitbucket.org/lbesson/web-sphinx/issues">web-sphinx/issues</a>.</p>
+please use the page <a href="https://bitbucket.org/lbesson/web-sphinx/issues" title="Create a issue ticket ?">web-sphinx/issues</a>.</p>
 <h2>About</h2>
  <p>This page is entirely generated from <strong>.templates/download.html</strong>,
 a Jinja template file.</p>
