--- a/.templates/download.fr.html
+++ b/.templates/download.fr.html
@@ -23,7 +23,7 @@
 <h2>Télécharger ces pages en PDF</h2>
  <p>Ces pages web sont générées avec <strong>Sphinx</strong>.
 Et lors de leurs générations, un de mes scripts produit aussi une version PDF de certaines pages (avec rst2pdf).</p>
- <p>Le dossier <a href="{{ pathto('pdf/', true)|e }}">pdf/</a> est là pour vous permettre de télécharger
+ <p>Le dossier <a href="{{ pathto('pdf/', true)|e }}" title="Dossier pdf/" >pdf/</a> est là pour vous permettre de télécharger
 les fichiers PDF ainsi produits.</p>
  <p>Ceci fonctionne, mais certaines pages perdent leur intérêt (le JavaScript n'est pas encore intégré dans les documents PDF produits, bien que ce soit peut-être possible).</p>
 <br/>
@@ -34,7 +34,7 @@ les fichiers PDF ainsi produits.</p>
   <a href="mailto:naereen[@]crans[.]org?subject=[web-sphinx]">naereen[@]crans[.]org</a>.</p>
 <h2>Problèmes</h2>
  <p>Si vous rencontrez une difficulté quelconque ou que vous avez des questions,
-veuillez utiliser la page <a href="https://bitbucket.org/lbesson/web-sphinx/issues">web-sphinx/issues</a>.</p>
+veuillez utiliser la page <a href="https://bitbucket.org/lbesson/web-sphinx/issues" title="Signaler un bug ?" >web-sphinx/issues</a>.</p>
 <h2>À propos</h2>
  <p>Cette page est générée grâce à <strong>.templates/download.html</strong>,
 un fichier de template Django.</p>
