--- a/.templates/globaltoc.en.html
+++ b/.templates/globaltoc.en.html
@@ -7,5 +7,5 @@
     :copyright: Copyright 2013 Lilian Besson
     :license: GPLv3, see LICENSE for details.
 #}
-<h3><a href="{{ pathto(master_doc) }}">Global Table of Contents</a></h3>
+<h3><a href="{{ pathto(master_doc) }}" title="Go to master document !" >Global table of contents</a></h3>
 {{ toctree() }}
