--- a/.templates/globaltoc.fr.html
+++ b/.templates/globaltoc.fr.html
@@ -7,5 +7,5 @@
     :copyright: Copyright 2013 Lilian Besson
     :license: GPLv3, see LICENSE for details.
 #}
-<h3><a href="{{ pathto(master_doc) }}">Table des Matières Globale</a></h3>
+<h3><a href="{{ pathto(master_doc) }}" title="Document maître" >Table des matières globale</a></h3>
 {{ toctree() }}
