--- a/.templates/localtoc.en.html
+++ b/.templates/localtoc.en.html
@@ -8,6 +8,6 @@
     :license: GPLv3, see LICENSE for details.
 #}
 {%- if display_toc %}
-  <h3><a href="{{ pathto(master_doc) }}">Local Table Of Content</a></h3>
+  <h3><a href="{{ pathto(master_doc) }}">Local table of content</a></h3>
   {{ toc }}
 {%- endif %}
