--- a/.templates/relations.en.html
+++ b/.templates/relations.en.html
@@ -7,17 +7,11 @@
     :copyright: Copyright 2013 Lilian Besson
     :license: GPLv3, see LICENSE for details.
 #}
-{%- if prev %}
-<div class="will-not-be-sticky">
+{%- if prev %}<div class="will-not-be-sticky">
   <h4>Previous page</h4>
-  <p class="topless"><a href="{{ prev.link|e }}"
-                        title="page précédente !">{{ prev.title }}</a></p>
-</div>
-{%- endif %}
-{%- if next %}
-<div class="will-not-be-sticky">
+  <p class="topless"><a href="{{ prev.link|e }}" title="page précédente !">{{ prev.title }}</a></p>
+  </div>{%- endif %}
+{%- if next %}<div class="will-not-be-sticky">
   <h4>Next page</h4>
-  <p class="topless"><a href="{{ next.link|e }}"
-                        title="page suivante !">{{ next.title }}</a></p>
-</div>
-{%- endif %}
+  <p class="topless"><a href="{{ next.link|e }}" title="page suivante !">{{ next.title }}</a></p>
+  </div>{%- endif %}
