--- a/.templates/searchbox.en.html
+++ b/.templates/searchbox.en.html
@@ -17,10 +17,7 @@
       <input type="hidden" name="check_keywords" value="yes" />
       <input type="hidden" name="area" value="default" />
     </form>
-    <p class="searchtip" style="font-size: 90%">
-    Search for a keyword ?
-    </p>
+    <p class="searchtip" style="font-size: 80%">Search for a keyword ?</p>
 </div>
 <script type="text/javascript">$('#searchbox').show(0);</script>
-</div>
-{%- endif %}
+</div>{%- endif %}
