--- a/.templates/searchbox.fr.html
+++ b/.templates/searchbox.fr.html
@@ -17,10 +17,7 @@
       <input type="hidden" name="check_keywords" value="yes" />
       <input type="hidden" name="area" value="default" />
     </form>
-    <p class="searchtip" style="font-size: 90%">
-    Saisissez un mot clef.
-    </p>
+    <p class="searchtip" style="font-size: 80%">Saisissez un mot clef.</p>
 </div>
 <script type="text/javascript">$('#searchbox').show(0);</script>
-</div>
-{%- endif %}
+</div>{%- endif %}
