--- a/.templates/sidebar_gpg.fr.html
+++ b/.templates/sidebar_gpg.fr.html
@@ -10,20 +10,16 @@
 <div class="will-not-be-sticky">
 <h3>Ma clé publique PGP</h3>
 <ul class="this-page-menu">
- <li>
-   Sur le serveur du MIT :
-  <a class="reference external image-reference"
-   href="http://pgp.mit.edu:11371/pks/lookup?op=get&search=0x01AACDB9C108F8A0">
+ <li>Sur le serveur du MIT :
+  <a class="reference external image-reference" title="pgp.mit.edu:11371/pks" 
+   href="http://pgp.mit.edu:11371/pks/lookup?op=get&amp;search=0x01AACDB9C108F8A0">
    <img alt="C108F8A0" src="{{ pathto('_images/.gpgpublickey_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" />
-  </a>
- </li>
+  </a></li>
  </br>
- <li>
-   Sur ce site :
-  <a class="reference external image-reference"
+ <li>Sur ce site :
+  <a class="reference external image-reference" title="key.asc" 
    href="{{ pathto('Lilian_Besson.asc', true)|e }}" >
    <img alt="C108F8A0" src="{{ pathto('_images/.gpgmypublickey_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" />
   </a>
- </li>
-</ul>
-</div>
+ </li></ul>
+ </div>
