--- a/.templates/sourcepdf.fr.html
+++ b/.templates/sourcepdf.fr.html
@@ -11,11 +11,10 @@
 <div class="will-not-be-sticky">
 <h3>Cette page en PDF ou en texte seul</h3>
 <ul class="this-page-menu">
- <li><a href="{{ pathto('pdf/' + sourcename + '.pdf', true)|e }}"
+ <li><a href="{{ pathto('pdf/' + sourcename + '.pdf', true)|e }}" title="Version PDF" 
         rel="nofollow">Voir la version PDF (expérimental)</a></li>
- <li><a href="{{ pathto('_sources/' + sourcename, true)|e }}"
+ <li><a href="{{ pathto('_sources/' + sourcename, true)|e }}" title="Version txt"
         rel="nofollow">Voir le fichier source rST</a></li>
  <li><br><a href="{{ pathto('download.fr')|e }}" rel="nofollow">Page de téléchargement</a></li><br/>
 </ul>
-</div>
-{%- endif %}
+</div>{%- endif %}
