--- a/.templates/sourcepdf.en.html
+++ b/.templates/sourcepdf.en.html
@@ -9,13 +9,13 @@
 #}
 {%- if show_source and has_source and sourcename %}
 <div class="will-not-be-sticky">
-<h3>This page as a PDF document or as plain text</h3>
+<h3>Other formats</h3>
 <ul class="this-page-menu">
  <li><a href="{{ pathto('pdf/' + sourcename + '.pdf', true)|e }}" title="PDF version" 
         rel="nofollow">Show a PDF version (experimental)</a></li>
  <li><a href="{{ pathto('_sources/' + sourcename, true)|e }}" title="txt version" 
         rel="nofollow">Show the source (.rst)</a></li>
- <li><br><a href="{{ pathto('download.en')|e }}" rel="nofollow">Download page</a></li><br/>
+ <li><a href="{{ pathto('download.en')|e }}" rel="nofollow">Download page</a></li><br/>
 </ul>
 </div>
 {%- endif %}
