noty en cours de test, avec buttons.css

--- a/.templates/download.en.html
+++ b/.templates/download.en.html
@@ -20,7 +20,7 @@
    </span>
   </b></p>
  {% endif %}
-<h2>Download these pages in PDFF</h2>
+<h2>Download these pages in PDF</h2>
  <p>These web pages are generated with <strong>Sphinx</strong>.
 And when I generate them, one of my script use rst2pdf to also produce a PDF version of each HTML pages.</p>
  <p>The folder <a href="{{ pathto('pdf/', true)|e }}" title="pdf/ folder" >pdf/</a> is there to download
@@ -32,6 +32,23 @@ some PDF files produced that way.</p>
  <p>This folder is protected by a username and a password.
   It is possible to ask for one by email, if needed, to
   <a href="mailto:naereen[@]crans[.]org?subject=[web-sphinx]">naereen[@]crans[.]org</a>.</p>
+<h2>Sources for this site</h2>
+ <h3>"Static" content : rST files</h3>
+   The git repository <a href="https://bitbucket.org/lbesson/web-sphinx/">lbesson/web-sphinx</a> hosts rST files,
+   Jinja templates, and many others ressources required to generate these web pages with <a href="http://sphinx-doc.org">sphinx</a>.
+  </br>
+   This site is an open-source and a free software project.
+   A zip archive can be downloaded with <a href="https://bitbucket.org/lbesson/web-sphinx/get/master.zip">this link</a>.
+ <h3>"Dynamical" content : JavaScript files</h3>
+   The git repository <a href="https://bitbucket.org/lbesson/web-sphinx-scripts/">lbesson/web-sphinx-scripts</a> hosts JavaScript files,
+   required by these web pages to be fully functional.
+  </br>
+   These scripts are written by me, or are from other open-source projects.
+   I think every used project is freely distributed under a license free nice enough to "allow me" to include them in my repository,
+   which can be downloaded with <a href="https://bitbucket.org/lbesson/web-sphinx-scripts/get/master.zip">this zip archive</a>.
+  </br>
+   <span style="color: red">Contactez-moi si je me trompe à ce propos, et si ça vous dérange !</span>
+  </br>
 <h2>Troubles</h2>
  <p>If you encounter any difficulty, or if you have a question,
 please use the page <a href="https://bitbucket.org/lbesson/web-sphinx/issues" title="Create a issue ticket ?">web-sphinx/issues</a>.</p>
