--- a/.templates/download.fr.html
+++ b/.templates/download.fr.html
@@ -32,6 +32,23 @@ les fichiers PDF ainsi produits.</p>
  <p>L'accès à ce dossier nécessite un nom d'utilisateur et un mot de passe.
   Il est possible d'en demander un par email, si nécessaire, à l'adresse suivante 
   <a href="mailto:naereen[@]crans[.]org?subject=[web-sphinx]">naereen[@]crans[.]org</a>.</p>
+<h2>Sources de ce site</h2>
+ <h3>Contenu "statique" : des fichiers rST</h3>
+   Le dépôt git <a href="https://bitbucket.org/lbesson/web-sphinx/">lbesson/web-sphinx</a> héberge les fichiers rST,
+   les templates, et autres ressources nécessaires à la génération de ces pages web avec <a href="http://sphinx-doc.org">sphinx</a>.
+  </br>
+   Ce site est un projet libre et open-source.
+   Une archive peut être récupérée via <a href="https://bitbucket.org/lbesson/web-sphinx/get/master.zip">ce lien</a>.
+ <h3>Contenu "dynamique" : des scripts JavaScript</h3>
+   Le dépôt git <a href="https://bitbucket.org/lbesson/web-sphinx-scripts/">lbesson/web-sphinx-scripts</a> héberge les scripts JavaScript,
+   nécessaires au bon fonctionnement de ces pages web.
+  </br>
+   Ces scripts sont écrits par moi ou issus de projets open-source.
+   Normalement, chaque projet utilisé est distribué sous license libre, suffisamment permissive pour "m'autoriser" à les redistribuer via ce dépôt,
+   ou <a href="https://bitbucket.org/lbesson/web-sphinx-scripts/get/master.zip">cette archive</a>.
+  </br>
+   <span style="color: red">Contactez-moi si je me trompe à ce propos, et si ça vous dérange !</span>
+  </br>
 <h2>Problèmes</h2>
  <p>Si vous rencontrez une difficulté quelconque ou que vous avez des questions,
 veuillez utiliser la page <a href="https://bitbucket.org/lbesson/web-sphinx/issues" title="Signaler un bug ?" >web-sphinx/issues</a>.</p>
